@@ -62,6 +62,7 @@ private:
 	// Options to pass to gui
 	int close_at_end; // -1 = not set, 1 = true, 0 false
 	int start_in_fullscreen; // -1 = not set, 1 = true, 0 false
+	bool use_control_server;
 };
 
 #endif
